Some documentation added; Issue Lombok with MapStruct solved